Validação de token ativo

--- a/CodeFirst/Web.config
+++ b/CodeFirst/Web.config
@@ -8,16 +8,27 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings>
-    <add name="ConexaoDbCodeFirst" connectionString="Server=localhost;Port=5432;Database=DbCodeFirst;User Id=postgres;Password=postgres;CommandTimeout=1800; Pooling=false" providerName="Npgsql" />
-    <add name="ConexaoSeguranca" connectionString="Server=localhost;Port=5432;Database=ConexaoSeguranca;User Id=postgres;Password=postgres;CommandTimeout=1800; Pooling=false" providerName="Npgsql" />
+  
+ <!-- Em seu banco de dados Postgres crie os bancos de dados (DbCodeFirst e ConexaoSeguranca) e modifique as strings de conexão de acordo com os bancos criados-->   
+ <connectionStrings>
+    <add name="ConexaoDbCodeFirst" connectionString="Server=WS2012TEIABD;Port=5432;Database=DbCodeFirst;User Id=postgres;Password=postgres;CommandTimeout=1800; Pooling=false" providerName="Npgsql" />
+    <add name="ConexaoSeguranca" connectionString="Server=WS2012TEIABD;Port=5432;Database=ConexaoSeguranca;User Id=postgres;Password=postgres;CommandTimeout=1800; Pooling=false" providerName="Npgsql" />
   </connectionStrings>
+  
+  
+ <!-- Altere os values das keys(as:AudienceId e as:AudienceSecret) abaixo-->   
+
+    
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="as:AudienceId" value="qualidade-composicao321" />
+    <add key="as:AudienceSecret" value="qualidade-composicao123" />
   </appSettings>
+  
+    
   <system.web>
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5.1" />
@@ -87,6 +98,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security.OAuth" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.IdentityModel.Tokens.Jwt" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.20622.1351" newVersion="4.0.20622.1351" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
