--- a/CodeFirst/packages.config
+++ b/CodeFirst/packages.config
@@ -24,6 +24,7 @@
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net451" />
   <package id="Microsoft.Owin.Security" version="3.1.0" targetFramework="net451" />
   <package id="Microsoft.Owin.Security.Cookies" version="2.1.0" targetFramework="net451" />
+  <package id="Microsoft.Owin.Security.Jwt" version="3.1.0" targetFramework="net451" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.1.0" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Modernizr" version="2.8.3" targetFramework="net451" />
@@ -31,6 +32,8 @@
   <package id="Npgsql" version="3.2.5" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="Respond" version="1.4.2" targetFramework="net451" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.2.206221351" targetFramework="net451" />
   <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net451" />
+  <package id="Thinktecture.IdentityModel.Core" version="1.4.0" targetFramework="net451" />
   <package id="WebGrease" version="1.6.0" targetFramework="net451" />
 </packages>
