--- a/CodeFirst/Web.config
+++ b/CodeFirst/Web.config
@@ -24,8 +24,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="as:AudienceId" value="qualidade-composicao321" />
-    <add key="as:AudienceSecret" value="qualidade-composicao123" />
+    <add key="as:AudienceId" value="414e1927a3884f68abc79f7283837fd1" />
+    <add key="as:AudienceSecret" value="qMCdFDQuF23RV1Y-1Gq9L3cF3VmuFwVbam4fMTdAfpo" />
   </appSettings>
   
     
@@ -99,10 +99,7 @@
         <assemblyIdentity name="Microsoft.Owin.Security.OAuth" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
       </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.IdentityModel.Tokens.Jwt" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.20622.1351" newVersion="4.0.20622.1351" />
-      </dependentAssembly>
+
     </assemblyBinding>
   </runtime>
   <entityFramework>
