--- a/CodeFirst/packages.config
+++ b/CodeFirst/packages.config
@@ -32,8 +32,8 @@
   <package id="Npgsql" version="3.2.5" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="Respond" version="1.4.2" targetFramework="net451" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.2.206221351" targetFramework="net451" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.1" targetFramework="net451" />
   <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net451" />
-  <package id="Thinktecture.IdentityModel.Core" version="1.4.0" targetFramework="net451" />
+  <package id="Thinktecture.IdentityModel.Core" version="1.3.0" targetFramework="net451" />
   <package id="WebGrease" version="1.6.0" targetFramework="net451" />
 </packages>
