--- a/CodeFirst/packages.config
+++ b/CodeFirst/packages.config
@@ -2,9 +2,12 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net451" />
   <package id="bootstrap" version="3.3.7" targetFramework="net451" />
+  <package id="bootstrap-select" version="1.12.4" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="EntityFramework6.Npgsql" version="3.1.1" targetFramework="net451" />
+  <package id="FontAwesome" version="4.7.0" targetFramework="net451" />
   <package id="jQuery" version="1.10.2" targetFramework="net451" />
+  <package id="knockoutjs" version="3.4.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net451" />
